# gorgon-system

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTIBUTING.md  LICENSE  NOTICE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CHANGELOG.md  MANUAL.md  ROADMAP.md  crabs.md  design_philosophy.md  mai_engine.md  octopus.md  sensors.md
docs/api_reference/: README.md
gorgon/bell/: cli.py
gorgon/core/: octopus.py
gorgon/crabs/: guardian.py
gorgon/examples/: README.md  demo_bell_cli.py  demo_cpu_mem.py  demo_octopus_cpu_mem.py  gorgon_bell.md
gorgon/rhopalia/: cpu.py  memory.py
gorgon_system.egg-info/: PKG-INFO  SOURCES.txt
